@@ -34,6 +34,11 @@ elseif (MSVC)
 endif()
 
 ##############################################################################
+# microphone
+
+add_subdirectory(microphone)
+
+##############################################################################
 # FreeGLUT
 
 set(FREEGLUT_BUILD_DEMOS OFF)
@@ -47,7 +52,7 @@ add_subdirectory(freeglut)
 add_executable(Saimin WIN32 Saimin.cpp tess.cpp InputBox.cpp Saimin_res.rc)
 target_compile_definitions(Saimin PRIVATE -DINITGUID -DUNICODE -D_UNICODE -DFREEGLUT_LIB_PRAGMAS=0)
 target_include_directories(Saimin PRIVATE "freeglut/include")
-target_link_libraries(Saimin PRIVATE comctl32 opengl32 glu32 shell32 shlwapi winmm freeglut_static)
+target_link_libraries(Saimin PRIVATE comctl32 opengl32 glu32 shell32 shlwapi winmm freeglut_static microphone_static)
 if(MSVC)
     target_link_options(Saimin PRIVATE "/entry:wWinMainCRTStartup")
 else()
