@@ -56,6 +56,7 @@
 - 2022-XX-YY ver.2.9
     - テキストの保存を修正。
     - ReadMeを修正。
+    - マイクを有効に。
 ------------------------------------------------------
 (English)
 ------------------------------------------------------
@@ -114,3 +115,4 @@
 - 2022-XX-YY ver.2.9
     - Fixed saving of texts.
     - Fixed ReadMe.
+    - Enabled microphone.
